# ImgToTileMap

./: CMakeLists.txt  README.md
Rule/: CMakeLists.txt  ImgConvert.cmake
src/: MainWindow.cpp  main.cpp
src/UIFile/: imgConvert.ui
src/moc/: MainWindow.h
